Bug 1646958 - Fix styling for WebRTC indicator when in High Contrast mode on Windows, or the user is using a dark theme. r=ntim
Thanks to Youri Wims for helping me put this patch together.

Differential Revision: https://phabricator.services.mozilla.com/D82041

UltraBlame original commit: 49c8ba00b68be4cd415c8803f79841b283851f97

--- a/browser/themes/shared/webRTC-indicator.inc.css
+++ b/browser/themes/shared/webRTC-indicator.inc.css
@@ -49,6 +49,19 @@ rgb
 -
 indicator
 -
+color
+:
+rgb
+(
+12
+12
+13
+)
+;
+-
+-
+indicator
+-
 border
 -
 color
@@ -71,16 +84,12 @@ indicator
 icon
 -
 fill
+-
+opacity
 :
-rgba
-(
-12
-12
-13
 0
 .
 8
-)
 ;
 -
 -
@@ -287,6 +296,194 @@ height
 )
 ;
 }
+media
+(
+prefers
+-
+color
+-
+scheme
+:
+dark
+)
+{
+:
+root
+{
+-
+-
+indicator
+-
+background
+-
+color
+:
+hsl
+(
+240
+1
+%
+20
+%
+)
+;
+-
+-
+indicator
+-
+color
+:
+rgb
+(
+249
+249
+250
+)
+;
+-
+-
+indicator
+-
+border
+-
+color
+:
+hsl
+(
+240
+1
+%
+40
+%
+)
+;
+-
+-
+indicator
+-
+item
+-
+separator
+:
+1px
+solid
+rgb
+(
+249
+249
+250
+)
+;
+-
+-
+minimize
+-
+button
+-
+background
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+1
+)
+;
+-
+-
+minimize
+-
+button
+-
+hover
+-
+background
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+15
+)
+;
+-
+-
+minimize
+-
+button
+-
+active
+-
+background
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+;
+-
+-
+device
+-
+button
+-
+hover
+-
+background
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+15
+)
+;
+-
+-
+device
+-
+button
+-
+active
+-
+background
+-
+color
+:
+rgba
+(
+249
+249
+250
+0
+.
+2
+)
+;
+}
+}
 body
 {
 display
@@ -306,6 +503,17 @@ var
 indicator
 -
 background
+-
+color
+)
+;
+color
+:
+var
+(
+-
+-
+indicator
 -
 color
 )
@@ -403,8 +611,17 @@ context
 properties
 :
 fill
+fill
+-
+opacity
 ;
 fill
+:
+currentColor
+;
+fill
+-
+opacity
 :
 var
 (
@@ -415,6 +632,8 @@ indicator
 icon
 -
 fill
+-
+opacity
 )
 ;
 background
@@ -435,6 +654,10 @@ dragging
 no
 -
 drag
+;
+color
+:
+inherit
 ;
 }
 .
@@ -915,6 +1138,39 @@ inline
 5px
 10px
 ;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+fill
+-
+opacity
+;
+fill
+:
+currentColor
+;
+fill
+-
+opacity
+:
+var
+(
+-
+-
+indicator
+-
+icon
+-
+fill
+-
+opacity
+)
+;
 }
 #
 device
@@ -1324,16 +1580,7 @@ opacity
 ;
 fill
 :
-var
-(
--
--
-indicator
--
-icon
--
-fill
-)
+currentColor
 ;
 fill
 -
